# whirlaway-website

./: Cargo.toml
conf/: prod.yaml
src/: configuration.rs  main.rs  startup.rs
src/routes/: home.rs
static/css/: style.css
static/html/: whirlaway.html
static/js/: main.js
templates/: base.html  whirlaway.html
templates/home/: home.html
