[package]
name = "whirly-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
anyhow = "1.0.56"
config = "0.12.0"
serde = { version = "1.0.136", features = ["derive"] }
serde-aux = "3.0.1"
tera = "1.15.0"
tokio = {version = "1.17.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.32"
tracing-actix-web = "0.5.1"
tracing-subscriber = { version = "0.3.9", features = ["registry"] }
